--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "katex": "^0.16.4",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   }
